--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -30,8 +30,8 @@ jobs:
     runs-on: [aws-ec2]
     steps:
       - name: Pull Image from docker hub
-        run: docker pull hkavindu64/demo-cicdwithdocker:latest
+        run: sudo docker pull hkavindu64/demo-cicdwithdocker:latest
       - name: Delete old container
-        run: docker rm -f springboot-container
+        run: sudo docker rm -f springboot-container
       - name: Run docker container
-        run: docker run -d -p 8080:8080 --name springboot-container hkavindu64/demo-cicdwithdocker
+        run: sudo docker run -d -p 8080:8080 --name springboot-container hkavindu64/demo-cicdwithdocker
